--- a/bower.json
+++ b/bower.json
@@ -12,5 +12,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.2.25",
+    "angular-route": "~1.2.25",
+    "bootstrap": "~3.2.0"
+  }
 }
